// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`andThen 1`] = `
OK {
  "context": Context {
    "index": 2,
    "input": "xy",
  },
  "value": Array [
    "x",
    "y",
  ],
}
`;

exports[`andThen failure 1`] = `
Fail {
  "context": Context {
    "index": 1,
    "input": "x",
  },
  "messages": Array [
    "y",
  ],
}
`;

exports[`andThen failure 2`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "y",
  },
  "messages": Array [
    "x",
  ],
}
`;

exports[`andThen failure 3`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "yx",
  },
  "messages": Array [
    "x",
  ],
}
`;

exports[`andThen failure 4`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "",
  },
  "messages": Array [
    "x",
  ],
}
`;

exports[`andThen success triple 2 1`] = `
OK {
  "context": Context {
    "index": 3,
    "input": "xyz",
  },
  "value": Array [
    "x",
    "y",
    "z",
  ],
}
`;

exports[`andThen triple 1`] = `
OK {
  "context": Context {
    "index": 3,
    "input": "xyz",
  },
  "value": Array [
    Array [
      "x",
      "y",
    ],
    "z",
  ],
}
`;

exports[`lisp lists 1`] = `
OK {
  "context": Context {
    "index": 3,
    "input": "(a)",
  },
  "value": Array [
    "a",
  ],
}
`;

exports[`matchEOF 1`] = `
OK {
  "context": Context {
    "index": 0,
    "input": "",
  },
  "value": "end of file",
}
`;

exports[`matchEOF 2`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "x",
  },
  "messages": Array [
    "end of file",
  ],
}
`;

exports[`matchRegExp 1`] = `
OK {
  "context": Context {
    "index": 2,
    "input": "12",
  },
  "value": "12",
}
`;

exports[`matchRegExp 2`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "abc",
  },
  "messages": Array [
    "/\\\\d+/",
  ],
}
`;

exports[`or 1`] = `
OK {
  "context": Context {
    "index": 1,
    "input": "a",
  },
  "value": "a",
}
`;

exports[`or 2`] = `
OK {
  "context": Context {
    "index": 1,
    "input": "b",
  },
  "value": "b",
}
`;

exports[`or 3`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "c",
  },
  "messages": Array [
    "b",
  ],
}
`;

exports[`or 4`] = `
Fail {
  "context": Context {
    "index": 1,
    "input": "ab",
  },
  "messages": Array [
    "end of file",
  ],
}
`;

exports[`or 5`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "",
  },
  "messages": Array [
    "b",
  ],
}
`;

exports[`repeat0 1`] = `
OK {
  "context": Context {
    "index": 0,
    "input": "",
  },
  "value": Array [],
}
`;

exports[`repeat0 2`] = `
OK {
  "context": Context {
    "index": 1,
    "input": "a",
  },
  "value": Array [
    "a",
  ],
}
`;

exports[`repeat0 3`] = `
OK {
  "context": Context {
    "index": 2,
    "input": "aa",
  },
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`repeat0 4`] = `
OK {
  "context": Context {
    "index": 3,
    "input": "aaa",
  },
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`repeat0 5`] = `
OK {
  "context": Context {
    "index": 4,
    "input": "aaaa",
  },
  "value": Array [
    "a",
    "a",
    "a",
    "a",
  ],
}
`;

exports[`repeat0 6`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "b",
  },
  "messages": Array [
    "end of file",
  ],
}
`;

exports[`repeat1 1`] = `
OK {
  "context": Context {
    "index": 1,
    "input": "a",
  },
  "value": Array [
    "a",
  ],
}
`;

exports[`repeat1 2`] = `
OK {
  "context": Context {
    "index": 2,
    "input": "aa",
  },
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`repeat1 3`] = `
OK {
  "context": Context {
    "index": 3,
    "input": "aaa",
  },
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`repeat1 4`] = `
OK {
  "context": Context {
    "index": 4,
    "input": "aaaa",
  },
  "value": Array [
    "a",
    "a",
    "a",
    "a",
  ],
}
`;

exports[`repeat1 5`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "",
  },
  "messages": Array [
    "a",
  ],
}
`;

exports[`repeat1 6`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "b",
  },
  "messages": Array [
    "a",
  ],
}
`;

exports[`separatedBy0 1`] = `
OK {
  "context": Context {
    "index": 0,
    "input": "",
  },
  "value": Array [],
}
`;

exports[`separatedBy0 2`] = `
OK {
  "context": Context {
    "index": 1,
    "input": "a",
  },
  "value": Array [
    "a",
  ],
}
`;

exports[`separatedBy0 3`] = `
Fail {
  "context": Context {
    "index": 1,
    "input": "a,a",
  },
  "messages": Array [
    "end of file",
  ],
}
`;

exports[`separatedBy0 4`] = `
Fail {
  "context": Context {
    "index": 1,
    "input": "a,a,a",
  },
  "messages": Array [
    "end of file",
  ],
}
`;

exports[`separatedBy0 5`] = `
Fail {
  "context": Context {
    "index": 1,
    "input": "a,a,b",
  },
  "messages": Array [
    "end of file",
  ],
}
`;

exports[`separatedBy0 6`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "b",
  },
  "messages": Array [
    "end of file",
  ],
}
`;

exports[`separatedBy1 1`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "",
  },
  "messages": Array [
    "a",
  ],
}
`;

exports[`separatedBy1 2`] = `
OK {
  "context": Context {
    "index": 1,
    "input": "a",
  },
  "value": Array [
    "a",
  ],
}
`;

exports[`separatedBy1 3`] = `
Fail {
  "context": Context {
    "index": 1,
    "input": "a,a",
  },
  "messages": Array [
    "end of file",
  ],
}
`;

exports[`separatedBy1 4`] = `
Fail {
  "context": Context {
    "index": 1,
    "input": "a,a,a",
  },
  "messages": Array [
    "end of file",
  ],
}
`;

exports[`separatedBy1 5`] = `
Fail {
  "context": Context {
    "index": 1,
    "input": "a,a,b",
  },
  "messages": Array [
    "end of file",
  ],
}
`;

exports[`separatedBy1 6`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "b",
  },
  "messages": Array [
    "a",
  ],
}
`;

exports[`test a test 1`] = `
OK {
  "context": Context {
    "index": 1,
    "input": "x",
  },
  "value": "x",
}
`;
